updated controls for html and main.js

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <ul id="ulUser">
             </ul>
             <h3 id="my-peer">Your Id: </h3>
-            <video id="localStream" width="300" controls></video>
+            <video id="localStream" width="300" ></video>
 
-            <video id="remoteStream" width="300" controls></video>
+            <video id="remoteStream" width="300" ></video>
             <br /><br />
             <input type="text" id="remoteId" placeholder="Remote ID">
             <button id="btnCall">Call</button>
         </div>
-        <div id="div-dang-ky">
+        <div id="div-register">
             <br /><br />
             <input type="text" id="txtUsername" placeholder="Enter your username">
             <button id="btnSignUp">Sign Up</button>
